fix: 将列表脑图横向滚动条更改为自动显示 | Change the horizontal scrollbar of the list mind map to auto show.

--- a/style/module/custom-type-map.css
+++ b/style/module/custom-type-map.css
@@ -8,7 +8,7 @@
 .protyle-wysiwyg *[custom-type~=导图].list,
 .protyle-wysiwyg *[custom-type~=mind-map].list,
 .protyle-wysiwyg *[custom-type~=map].list {
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-top: 2em;
     padding-bottom: 2em;
 }
